@@ -12,6 +12,7 @@ import urlparse
 
 from werkzeug._internal import _decode_unicode
 from werkzeug.datastructures import MultiDict, iter_multi_items
+from werkzeug.wsgi import make_chunk_iter
 
 
 #: list of characters that are always safe in URLs.
@@ -237,20 +238,62 @@ def url_decode(s, charset='utf-8', decode_keys=False, include_empty=True,
     """
     if cls is None:
         cls = MultiDict
-    result = []
-    for pair in str(s).split(separator):
+    return cls(_url_decode_impl(str(s).split(separator), charset, decode_keys,
+                                include_empty, errors))
+
+
+def url_decode_stream(stream, charset='utf-8', decode_keys=False,
+                      include_empty=True, errors='replace', separator='&',
+                      cls=None, limit=None, return_iterator=False):
+    """Works like :func:`url_decode` but decodes a stream.  The behavior
+    of stream and limit follows functions like
+    :func:`~werkzeug.wsgi.make_line_iter`.  The generator of pairs is
+    directly feeded to the `cls` so you can consume the data while it's
+    parsed.
+
+    .. versionadded:: 0.8
+
+    :param stream: a stream with the encoded querystring
+    :param charset: the charset of the query string.
+    :param decode_keys: set to `True` if you want the keys to be decoded
+                        as well.
+    :param include_empty: Set to `False` if you don't want empty values to
+                          appear in the dict.
+    :param errors: the decoding error behavior.
+    :param separator: the pair separator to be used, defaults to ``&``
+    :param cls: an optional dict class to use.  If this is not specified
+                       or `None` the default :class:`MultiDict` is used.
+    :param limit: the content length of the URL data.  Not necessary if
+                  a limited stream is provided.
+    :param return_iterator: if set to `True` the `cls` argument is ignored
+                            and an iterator over all decoded pairs is
+                            returned
+    """
+    if return_iterator:
+        cls = lambda x: x
+    elif cls is None:
+        cls = MultiDict
+    pair_iter = make_chunk_iter(stream, separator, limit)
+    return cls(_url_decode_impl(pair_iter, charset, decode_keys,
+                                include_empty, errors))
+
+
+def _url_decode_impl(pair_iter, charset, decode_keys, include_empty,
+                     errors):
+    for pair in pair_iter:
         if not pair:
             continue
         if '=' in pair:
             key, value = pair.split('=', 1)
         else:
+            if not include_empty:
+                continue
             key = pair
             value = ''
         key = _unquote_plus(key)
         if decode_keys:
             key = _decode_unicode(key, charset, errors)
-        result.append((key, url_unquote_plus(value, charset, errors)))
-    return cls(result)
+        yield key, url_unquote_plus(value, charset, errors)
 
 
 def url_encode(obj, charset='utf-8', encode_keys=False, sort=False, key=None,
@@ -274,10 +317,41 @@ def url_encode(obj, charset='utf-8', encode_keys=False, sort=False, key=None,
     :param key: an optional function to be used for sorting.  For more details
                 check out the :func:`sorted` documentation.
     """
+    return separator.join(_url_encode_impl(obj, charset, encode_keys, sort, key))
+
+
+def url_encode_stream(obj, stream=None, charset='utf-8', encode_keys=False,
+                      sort=False, key=None, separator='&'):
+    """Like :meth:`url_encode` but writes the results to a stream
+    object.  If the stream is `None` a generator over all encoded
+    pairs is returned.
+
+    .. versionadded:: 0.8
+
+    :param obj: the object to encode into a query string.
+    :param stream: a stream to write the encoded object into or `None` if
+                   an iterator over the encoded pairs should be returned.  In
+                   that case the separator argument is ignored.
+    :param charset: the charset of the query string.
+    :param encode_keys: set to `True` if you have unicode keys.
+    :param sort: set to `True` if you want parameters to be sorted by `key`.
+    :param separator: the separator to be used for the pairs.
+    :param key: an optional function to be used for sorting.  For more details
+                check out the :func:`sorted` documentation.
+    """
+    gen = _url_encode_impl(obj, charset, encode_keys, sort, key)
+    if stream is None:
+        return gen
+    for idx, chunk in enumerate(gen):
+        if idx:
+            stream.write(separator)
+        stream.write(chunk)
+
+
+def _url_encode_impl(obj, charset, encode_keys, sort, key):
     iterable = iter_multi_items(obj)
     if sort:
         iterable = sorted(iterable, key=key)
-    tmp = []
     for key, value in iterable:
         if value is None:
             continue
@@ -289,9 +363,7 @@ def url_encode(obj, charset='utf-8', encode_keys=False, sort=False, key=None,
             value = value.encode(charset)
         else:
             value = str(value)
-        tmp.append('%s=%s' % (_quote(key),
-                              _quote_plus(value)))
-    return separator.join(tmp)
+        yield '%s=%s' % (_quote(key), _quote_plus(value))
 
 
 def url_quote(s, charset='utf-8', safe='/:'):
