@@ -41,6 +41,9 @@ Release date to be announced, codename to be decided.
   header injection attacks.
 - Made it possible through subclassing to select a different remote
   addr in the proxy fix.
+- Added stream based URL decoding.  This reduces memory usage on large
+  transmitted form data that is URL decoded since Werkzeug will no longer
+  load all the unparsed data into memory.
 - Removed support for Python 2.4
 
 Version 0.7.2
